--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -58,18 +58,18 @@
   "dependencies": {
     "comment-json": "^1.1.3",
     "configstore": "^4.0.0",
-    "cspell-dict-companies": "^1.0.9",
-    "cspell-dict-cpp": "^1.1.18",
+    "cspell-dict-companies": "^1.0.10",
+    "cspell-dict-cpp": "^1.1.19",
     "cspell-dict-django": "^1.0.11",
     "cspell-dict-elixir": "^1.0.8",
     "cspell-dict-en-gb": "^1.1.10",
-    "cspell-dict-en_us": "^1.2.14",
-    "cspell-dict-fullstack": "^1.0.12",
+    "cspell-dict-en_us": "^1.2.15",
+    "cspell-dict-fullstack": "^1.0.13",
     "cspell-dict-golang": "^1.1.11",
     "cspell-dict-html-symbol-entities": "^1.0.10",
     "cspell-dict-java": "^1.0.9",
     "cspell-dict-latex": "^1.0.10",
-    "cspell-dict-lorem-ipsum": "^1.0.8",
+    "cspell-dict-lorem-ipsum": "^1.0.9",
     "cspell-dict-php": "^1.0.10",
     "cspell-dict-powershell": "^1.0.1",
     "cspell-dict-python": "^1.0.11",
@@ -77,10 +77,10 @@
     "cspell-dict-scala": "^1.0.8",
     "cspell-io": "^4.0.9",
     "cspell-trie-lib": "^4.0.7",
+    "cspell-util-bundle": "^4.0.0",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
-    "vscode-uri": "^1.0.6",
-    "xregexp": "^4.2.4"
+    "vscode-uri": "^1.0.6"
   },
   "engines": {
     "node": ">=10.0.0"
