--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -43,13 +43,13 @@
     "commander": "^2.20.0",
     "cspell-io": "^4.0.9",
     "cspell-trie-lib": "^4.0.7",
+    "cspell-util-bundle": "^4.0.0",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "glob": "^7.1.4",
     "hunspell-reader": "^3.0.1",
     "iconv-lite": "^0.4.24",
-    "minimatch": "^3.0.4",
-    "xregexp": "^4.2.4"
+    "minimatch": "^3.0.4"
   },
   "nyc": {
     "include": [
