--- a/package.json
+++ b/package.json
@@ -64,9 +64,12 @@
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "source-map-support": "^0.5.12",
+    "ts-loader": "^6.0.1",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2"
   },
   "nyc": {
     "include": [
