--- a/packages/cspell-io/tsconfig.json
+++ b/packages/cspell-io/tsconfig.json
@@ -9,6 +9,7 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
+		"newLine": "LF",
 		"strict": true,
 		"strictFunctionTypes": false,
 		"forceConsistentCasingInFileNames": true,
