Rename launch names for each package

--- a/packages/cspell-glob/.vscode/launch.json
+++ b/packages/cspell-glob/.vscode/launch.json
@@ -7,7 +7,7 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Run Mocha Current File",
+			"name": "cspell-glob: Run Mocha Current File",
 			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
 			"args": [
 				"--timeout","999999",
@@ -18,7 +18,7 @@
 		},
         {
 			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Run mocha",
+			"name": "cspell-glob: Run mocha",
 			// Type of configuration. Possible values: "node", "mono".
 			"type": "node",
             // Request type "launch" or "attach"
