--- a/packages/cspell-lib/.vscode/launch.json
+++ b/packages/cspell-lib/.vscode/launch.json
@@ -4,74 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Run CSpell",
-            "program": "${workspaceRoot}/dist/app.js",
-			"args": ["-e", "src", "-v", "**/*.py"],
-            "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-            "sourceMaps": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Run CSpell against current file",
-            "program": "${workspaceRoot}/dist/app.js",
-			"args": ["-v", "${file}"],
-            "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-            "sourceMaps": true,
-            "preLaunchTask": "npm: build"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Run CSpell against stdin",
-            "program": "${workspaceRoot}/dist/app.js",
-			"args": ["-v", "stdin"],
-            "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-            "sourceMaps": true,
-            "preLaunchTask": "npm: build",
-            "console": "integratedTerminal"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Run Trace",
-            "program": "${workspaceRoot}/dist/app.js",
-			"args": ["trace", "about"],
-            "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-            "sourceMaps": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Run Check",
-            "program": "${workspaceRoot}/dist/app.js",
-			"args": ["check", "--config", "${workspaceRoot}/samples/.cspell.json", "${workspaceRoot}/samples/src/sample.c"],
-            "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-            "sourceMaps": true
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Run bad glob",
-            "program": "${workspaceRoot}/dist/app.js",
-			"args": ["-v", "src", "**/*.test.ts"],
-            "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-            "sourceMaps": true
-        },
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Run Mocha Current File",
+			"name": "cppell-lib: Run Mocha Current File",
 			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
 			"args": [
 				"--timeout","999999",
@@ -81,16 +17,8 @@
 			]
 		},
         {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach to Process",
-            "port": 5858,
-            "outFiles": [],
-            "sourceMaps": true
-        },
-        {
 			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Run mocha",
+			"name": "cppell-lib: Run mocha",
 			// Type of configuration. Possible values: "node", "mono".
 			"type": "node",
             // Request type "launch" or "attach"
