Move mocha types to each package to prepare to move to jest

--- a/package.json
+++ b/package.json
@@ -45,18 +45,18 @@
     "@types/lorem-ipsum": "^1.0.2",
     "@types/micromatch": "^3.1.0",
     "@types/minimatch": "^3.0.3",
-    "@types/mocha": "^5.2.6",
     "@types/mock-require": "^2.0.0",
     "@types/node": "^10.14.7",
     "@types/xregexp": "^3.0.30",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
-    "cspell": "^4.0.7",
-    "cspell-dict-en_us": "^1.2.13",
-    "cspell-dict-es-es": "^1.0.12",
-    "cspell-dict-nl-nl": "^1.0.17",
+    "cspell": "^4.0.13",
+    "cspell-dict-en_us": "^1.2.15",
+    "cspell-dict-es-es": "^1.0.13",
+    "cspell-dict-nl-nl": "^1.0.18",
     "cspell-tools": "file:packages/cspell-tools",
     "fs-extra": "^7.0.1",
+    "jest": "^24.8.0",
     "lerna": "^3.14.1",
     "lorem-ipsum": "^1.0.6",
     "mocha": "^6.1.4",
@@ -64,11 +64,12 @@
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "source-map-support": "^0.5.12",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.1",
-    "ts-node": "^8.1.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
-    "webpack": "^4.32.0",
+    "webpack": "^4.32.1",
     "webpack-cli": "^3.3.2"
   },
   "nyc": {
