--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -72,5 +72,8 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275"
+  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
+  "devDependencies": {
+    "@types/mocha": "^5.2.6"
+  }
 }
