--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -86,5 +86,8 @@
       "json"
     ]
   },
-  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275"
+  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
+  "devDependencies": {
+    "@types/mocha": "^5.2.6"
+  }
 }
