--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -56,6 +56,7 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.6",
     "@types/xregexp": "^3.0.30",
     "rimraf": "^2.6.3",
     "xregexp": "^4.2.4"
