--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -22,12 +22,12 @@
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
-    "coverage": "npm run generate-code-coverage",
+    "coverage": "jest --coverage",
     "generate-code-coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
-    "test-ts": "NODE_ENV=test ../../node_modules/.bin/mocha --recursive \"src/**/*.test.ts\"",
-    "test-watch": "../../node_modules/.bin/mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
+    "test-ts": "../../node_modules/.bin/jest",
+    "test-watch": "../../node_modules/.bin/jest --watch",
     "prepublishOnly": "npm run lint && npm run clean-build && npm test",
-    "test": "mocha --recursive \"dist/**/*.test.js\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -88,6 +88,6 @@
   },
   "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
   "devDependencies": {
-    "@types/mocha": "^5.2.6"
+    "@types/jest": "^24.0.13"
   }
 }
