--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -15,10 +15,9 @@
     "watch": "tsc -p . -w",
     "clean": "rimraf dist",
     "clean-build": "npm run clean && npm run build",
-    "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
-    "test-ts": "../../node_modules/.bin/rimraf temp && NODE_ENV=test ../../node_modules/.bin/mocha --require ts-node/register --recursive \"src/**/*.test.ts\"",
-    "test-watch": "../../node_modules/.bin/mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
-    "test": "rimraf temp && mocha --recursive ./dist/**/*.test.js"
+    "coverage": "jest --coverage",
+    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -60,6 +59,6 @@
   },
   "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
   "devDependencies": {
-    "@types/mocha": "^5.2.6"
+    "@types/jest": "^24.0.13"
   }
 }
