Move cspell-tools to jest

--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -11,11 +11,10 @@
     "watch": "tsc -p . -w",
     "clean-build": "npm run clean && npm run build",
     "clean": "rimraf dist && rimraf temp",
-    "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
     "lint": "tslint --project tsconfig.json",
-    "test-ts": "NODE_ENV=test ../../node_modules/.bin/mocha --require ts-node/register --recursive \"src/**/*.test.ts\"",
-    "test-watch": "../../node_modules/.bin/mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
-    "test": "mocha --recursive ./dist/**/*.test.js"
+    "coverage": "jest --coverage",
+    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -74,6 +73,6 @@
   },
   "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
   "devDependencies": {
-    "@types/mocha": "^5.2.6"
+    "@types/jest": "^24.0.13"
   }
 }
