Fix coverage reporting

--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "check-spelling": "cspell **/{*.ts,*.md}",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
-    "coverage": "npm run gen-coverage && nyc report --reporter=lcov --reporter=html",
-    "gen-coverage": "rimraf .nyc_output && lerna run coverage",
+    "coverage": "npm run gen-coverage",
+    "gen-coverage": "lerna run coverage",
     "install": "lerna bootstrap",
     "lint-travis": "lerna run lint-travis",
     "prepare": "npm run clean-build",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
-    "travis-coverage": "npm run gen-coverage && nyc report --reporter=text-lcov | coveralls",
+    "travis-coverage": "npm run gen-coverage && globcat packages/*/coverage/lcov.info | coveralls",
     "test": "lerna run test"
   },
   "repository": {
@@ -36,16 +36,15 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.1.7",
     "@types/comment-json": "^1.1.1",
     "@types/configstore": "^4.0.0",
     "@types/fs-extra": "^5.1.0",
     "@types/glob": "^7.1.1",
+    "@types/jest": "^24.0.13",
     "@types/lorem-ipsum": "^1.0.2",
     "@types/micromatch": "^3.1.0",
     "@types/minimatch": "^3.0.3",
-    "@types/mock-require": "^2.0.0",
     "@types/node": "^10.14.7",
     "@types/xregexp": "^3.0.30",
     "chai": "^4.2.0",
@@ -56,17 +55,14 @@
     "cspell-dict-nl-nl": "^1.0.18",
     "cspell-tools": "file:packages/cspell-tools",
     "fs-extra": "^7.0.1",
+    "globcat": "^1.1.3",
     "jest": "^24.8.0",
     "lerna": "^3.14.1",
     "lorem-ipsum": "^1.0.6",
-    "mocha": "^6.1.4",
-    "mock-require": "^3.0.3",
-    "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "source-map-support": "^0.5.12",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.1",
-    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "webpack": "^4.32.1",
