--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -60,7 +60,5 @@
   "dependencies": {
     "micromatch": "^4.0.2"
   },
-  "devDependencies": {
-    "@types/jest": "^24.0.13"
-  }
+  "devDependencies": {}
 }
