--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -87,7 +87,5 @@
     ]
   },
   "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
-  "devDependencies": {
-    "@types/jest": "^24.0.13"
-  }
+  "devDependencies": {}
 }
