--- a/packages/cspell-glob/.vscode/launch.json
+++ b/packages/cspell-glob/.vscode/launch.json
@@ -5,43 +5,30 @@
     "version": "0.2.0",
     "configurations": [
 		{
-			"type": "node",
-			"request": "launch",
-			"name": "cspell-glob: Run Mocha Current File",
-			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
-			"args": [
-				"--timeout","999999",
-				"--colors",
-				"--require", "ts-node/register",
-				"${file}"
-			]
-		},
-        {
-			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "cspell-glob: Run mocha",
-			// Type of configuration. Possible values: "node", "mono".
-			"type": "node",
-            // Request type "launch" or "attach"
+            "type": "node",
             "request": "launch",
-			// Workspace relative or absolute path to the program.
-			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
-			// Automatically stop program after launch.
-			"stopOnEntry": false,
-			// Command line arguments passed to the program.
-			"args": [
-				"--timeout","999999",
-				"--colors",
-                "--require", "ts-node/register",
-                "--recursive", "src/**/*.ts"
-            ],
-			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
-			"cwd": "${workspaceRoot}",
-			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
-			"runtimeExecutable": null,
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
-			"sourceMaps": true,
-			// Environment variables passed to the program.
-			"env": { "NODE_ENV": "test"}
-		}
+            "name": "cspell-glob: Jest current-file",
+            "program": "${workspaceFolder}/../../node_modules/.bin/jest",
+            "args": ["--runInBand", "${file}"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "windows": {
+                "program": "${workspaceFolder}/../../node_modules/jest/bin/jest",
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "cspell-glob: Jest All",
+            "program": "${workspaceFolder}/../../node_modules/.bin/jest",
+            "args": ["--runInBand"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "windows": {
+                "program": "${workspaceFolder}/../../node_modules/jest/bin/jest",
+            }
+        }
     ]
 }
