--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -72,7 +72,5 @@
     "node": ">=10.0.0"
   },
   "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
-  "devDependencies": {
-    "@types/jest": "^24.0.13"
-  }
+  "devDependencies": {}
 }
