--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -57,7 +57,5 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "devDependencies": {
-    "@types/jest": "^24.0.13"
-  }
+  "devDependencies": {}
 }
