--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-io",
-  "version": "4.0.10",
+  "version": "4.0.11",
   "description": "A library of useful I/O functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -57,6 +57,5 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
-  "devDependencies": {}
+  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275"
 }
