--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-tools",
-  "version": "4.0.14",
+  "version": "4.0.15",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "bin": {
@@ -40,9 +40,9 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^2.20.0",
-    "cspell-io": "^4.0.10",
-    "cspell-trie-lib": "^4.0.8",
-    "cspell-util-bundle": "^4.0.1",
+    "cspell-io": "^4.0.11",
+    "cspell-trie-lib": "^4.0.9",
+    "cspell-util-bundle": "^4.0.2",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "glob": "^7.1.4",
@@ -71,6 +71,5 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
-  "devDependencies": {}
+  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275"
 }
