--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "4.0.13",
+  "version": "4.0.14",
   "description": "A Spelling Checker for Code!",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -55,7 +55,7 @@
     "commander": "^2.20.0",
     "comment-json": "^1.1.3",
     "configstore": "^4.0.0",
-    "cspell-lib": "^4.0.10",
+    "cspell-lib": "^4.0.11",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "get-stdin": "^7.0.0",
@@ -86,6 +86,5 @@
       "json"
     ]
   },
-  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275",
-  "devDependencies": {}
+  "gitHead": "437efcc5f813402c695cfce56e8af65e16459275"
 }
