--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -62,8 +62,7 @@
     "glob": "^7.1.4",
     "minimatch": "^3.0.4",
     "rxjs": "^6.5.2",
-    "vscode-uri": "^1.0.6",
-    "xregexp": "^4.2.4"
+    "vscode-uri": "^1.0.6"
   },
   "engines": {
     "node": ">=10.0.0"
