--- a/packages/hunspell-reader/.vscode/launch.json
+++ b/packages/hunspell-reader/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Run Command Words",
+            "name": "hunspell: Run Command Words",
             "program": "${workspaceRoot}/dist/app.js",
 			"cwd": "${workspaceRoot}",
 			"args": [
@@ -23,7 +23,7 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Run Mocha Current File",
+			"name": "hunspell: Run Mocha Current File",
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
 			"args": [
 				"--timeout","999999",
@@ -36,7 +36,7 @@
 		},
         {
 			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "Run mocha",
+			"name": "hunspell: Run mocha",
 			// Type of configuration. Possible values: "node", "mono".
 			"type": "node",
             // Request type "launch" or "attach"
