--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -55,6 +55,7 @@
     "commander": "^2.20.0",
     "comment-json": "^1.1.3",
     "configstore": "^4.0.0",
+    "cspell-glob": "^0.1.9",
     "cspell-lib": "^4.0.13",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
