--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -61,8 +61,7 @@
     "gensequence": "^2.1.2",
     "get-stdin": "^7.0.0",
     "glob": "^7.1.4",
-    "minimatch": "^3.0.4",
-    "vscode-uri": "^1.0.8"
+    "minimatch": "^3.0.4"
   },
   "engines": {
     "node": ">=10.0.0"
