--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -58,9 +58,10 @@
     "cspell-dict-django": "^1.0.11",
     "cspell-dict-elixir": "^1.0.9",
     "cspell-dict-en-gb": "^1.1.10",
-    "cspell-dict-en_us": "^1.2.16",
+    "cspell-dict-en_us": "^1.2.17",
     "cspell-dict-fullstack": "^1.0.14",
     "cspell-dict-golang": "^1.1.11",
+    "cspell-dict-haskell": "^1.0.1",
     "cspell-dict-html-symbol-entities": "^1.0.10",
     "cspell-dict-java": "^1.0.9",
     "cspell-dict-latex": "^1.0.10",
