--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ node_js:
 
 install:
   # the prepare script run during install currently does clean-build
-  - npm install
+  - npm ci
 
 script:
   - npm test
