--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "lerna run clean",
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
-    "install": "lerna bootstrap",
+    "install": "lerna bootstrap --ci",
     "lint-travis": "lerna run lint-travis",
     "prepare": "npm run clean-build",
     "test-spec": "lerna run test-spec",
