Switch to using fonts, dotnet, and software terms from cspell-dicts

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -56,9 +56,11 @@
     "cspell-dict-companies": "^1.0.12",
     "cspell-dict-cpp": "^1.1.21",
     "cspell-dict-django": "^1.0.12",
+    "cspell-dict-dotnet": "^1.0.12",
     "cspell-dict-elixir": "^1.0.10",
     "cspell-dict-en-gb": "^1.1.11",
     "cspell-dict-en_us": "^1.2.18",
+    "cspell-dict-fonts": "^1.0.2",
     "cspell-dict-fullstack": "^1.0.15",
     "cspell-dict-golang": "^1.1.12",
     "cspell-dict-haskell": "^1.0.2",
@@ -71,6 +73,7 @@
     "cspell-dict-python": "^1.0.14",
     "cspell-dict-rust": "^1.0.10",
     "cspell-dict-scala": "^1.0.9",
+    "cspell-dict-software-terms": "^1.0.2",
     "cspell-io": "^4.0.18",
     "cspell-trie-lib": "^4.1.0",
     "cspell-util-bundle": "^4.0.5",
