Use TypeScript library form cspell-dicts

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -74,6 +74,7 @@
     "cspell-dict-rust": "^1.0.10",
     "cspell-dict-scala": "^1.0.9",
     "cspell-dict-software-terms": "^1.0.2",
+    "cspell-dict-typescript": "^1.0.1",
     "cspell-io": "^4.0.18",
     "cspell-trie-lib": "^4.1.0",
     "cspell-util-bundle": "^4.0.5",
