Fix build issue do to graceful-fs bug
See: [4.2.2 causes stack overflows in Jest · Issue #174 · isaacs/node-graceful-fs](https://github.com/isaacs/node-graceful-fs/issues/174)

cspell:ignore isaacs

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/lorem-ipsum": "^1.0.2",
     "@types/micromatch": "^3.1.0",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^10.14.22",
+    "@types/node": "^10.17.0",
     "@types/xregexp": "^3.0.30",
     "chai": "^4.2.0",
     "coveralls": "^3.0.7",
@@ -86,5 +86,6 @@
       "json",
       "html"
     ]
-  }
+  },
+  "dependencies": {}
 }
