Generate json-schema from the definition file.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
+    "build-schema": "lerna run build-schema",
     "check-spelling": "cspell **/{*.ts,*.md}",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
@@ -62,6 +63,7 @@
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
     "ts-jest": "^24.1.0",
+    "ts-json-schema-generator": "^0.55.0",
     "ts-loader": "^6.2.1",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
