--- a/packages/cspell/.vscode/settings.json
+++ b/packages/cspell/.vscode/settings.json
@@ -7,5 +7,11 @@
     },
     "cSpell.ignoreWords": [
         "istanbuljs"
-    ]
+    ],
+	"json.schemas": [{
+		"fileMatch": [
+            "cspell.json", ".cspell.json", "cSpell.json"
+        ],
+        "url": "../cspell-lib/cspell.json-schema.json"
+	}]
 }
