--- a/packages/cspell/.vscode/settings.json
+++ b/packages/cspell/.vscode/settings.json
@@ -12,6 +12,6 @@
 		"fileMatch": [
             "cspell.json", ".cspell.json", "cSpell.json"
         ],
-        "url": "../cspell-lib/cspell.json-schema.json"
+        "url": "../../cspell.schema.json"
 	}]
 }
