--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
-*.txt		text
+*.txt		text eol=lf
+*.ts        text eol=lf
 *.CRLF.txt	text eol=crlf
