--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,8 @@ strategy:
       imageName: 'ubuntu-16.04'
     mac:
       imageName: 'macos-10.13'
-    # Remove Windows until the line ending issue can be fixed.
-    # windows:
-    #   imageName: 'vs2017-win2016'
+    windows:
+      imageName: 'vs2017-win2016'
 
 pool:
   vmImage: $(imageName)
