Add a max suffix application depth (#5)
* fix issue with escaping suffix matches

* Filter out duplicate rules.

* Limit the depth we will apply new suffix rules.

* Make sure we can read the Hungarian dictionary

* Add more tests for better coverage.

--- a/packages/hunspell-reader/.vscode/launch.json
+++ b/packages/hunspell-reader/.vscode/launch.json
@@ -18,7 +18,25 @@
 				"words_en.txt",
 				"./dictionaries/en_US.dic"
 			],
-            "outFiles": []
+            "outFiles": [],
+            "sourceMaps": true,
+            "preLaunchTask": "npm: build"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "hunspell: Run Command Words Hungarian",
+            "program": "${workspaceRoot}/dist/app.js",
+			"cwd": "${workspaceRoot}",
+			"args": [
+				"words",
+				"-n", "100",
+				"-m", "0",
+				"./dictionaries/hu/hu.dic"
+			],
+            "outFiles": [],
+            "sourceMaps": true,
+            "preLaunchTask": "npm: build"
         },
 		{
 			"type": "node",
