Allow for fat nodes.

--- a/packages/cspell-trie2-lib/.vscode/launch.json
+++ b/packages/cspell-trie2-lib/.vscode/launch.json
@@ -7,7 +7,7 @@
 		{
             "type": "node",
             "request": "launch",
-            "name": "trie-lib: Jest current-file",
+            "name": "trie-lib2: Jest current-file",
             "program": "${workspaceFolder}/../../node_modules/.bin/jest",
             "args": ["--runInBand", "${file}"],
             "console": "integratedTerminal",
@@ -20,7 +20,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "trie-lib: Jest All",
+            "name": "trie-lib2: Jest All",
             "program": "${workspaceFolder}/../../node_modules/.bin/jest",
             "args": ["--runInBand"],
             "console": "integratedTerminal",
