--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "comment-json": "^1.1.3",
     "configstore": "^5.0.0",
+    "cspell-dict-bash": "^1.0.1",
     "cspell-dict-companies": "^1.0.16",
     "cspell-dict-cpp": "^1.1.23",
     "cspell-dict-django": "^1.0.12",
