--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -73,6 +73,7 @@
     "cspell-dict-php": "^1.0.11",
     "cspell-dict-powershell": "^1.0.3",
     "cspell-dict-python": "^1.0.17",
+    "cspell-dict-ruby": "^1.0.1",
     "cspell-dict-rust": "^1.0.10",
     "cspell-dict-scala": "^1.0.9",
     "cspell-dict-software-terms": "^1.0.3",
