Failed to publish

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -108,5 +108,6 @@
   },
   "devDependencies": {
     "cspell-tools": "^4.1.7"
-  }
+  },
+  "gitHead": "d4411f81184f8551fc4aee796fe50242103951cf"
 }
