--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "cspell-dict-en_us": "^1.2.23",
     "cspell-dict-es-es": "^1.0.17",
     "cspell-dict-nl-nl": "^1.0.22",
-    "cspell-tools": "file:packages/cspell-tools",
+    "cspell-tools": "^4.1.6",
     "fs-extra": "^8.1.0",
     "globcat": "^1.2.0",
     "jest": "^24.9.0",
