[cspell-trie-lib] removed unused package

--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -33,8 +33,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
-    "gensequence": "^3.0.1",
-    "js-xxhash": "^1.0.4"
+    "gensequence": "^3.0.1"
   },
   "nyc": {
     "include": [
