update test-watch script

--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -26,7 +26,7 @@
     "clean": "rimraf lib",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
-    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test-watch": "jest --watch",
     "test": "jest"
   },
   "repository": {
