--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist && rimraf temp",
     "lint": "tslint --project tsconfig.json",
     "coverage": "jest --coverage",
-    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test-watch": "jest --watch",
     "test": "jest"
   },
   "repository": {
