--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -15,7 +15,7 @@
     "build": "tsc -p .",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
-    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test-watch": "jest --watch",
     "test": "jest",
     "watch": "tsc -w"
   },
