--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -16,7 +16,7 @@
     "clean": "rimraf dist",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
-    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test-watch": "jest --watch",
     "test": "jest"
   },
   "repository": {
