--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -26,7 +26,7 @@
     "tscv": "tsc -v",
     "coverage": "npm run generate-code-coverage",
     "generate-code-coverage": "jest --coverage",
-    "test-watch": "../../node_modules/.bin/jest --watch",
+    "test-watch": "jest --watch",
     "prepublishOnly": "npm run lint && npm run clean-build && npm test",
     "test": "jest"
   },
