[cspell-trie] support reading trie.gz and text.gz files

--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cspell-trie",
   "version": "4.1.8",
-  "description": "Trie Data Structure and tools to support cspell.",
-  "bin": "./dist/app.js",
+  "description": "Trie Data Structure reader for cspell",
+  "bin": "bin.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
+    "bin.js",
     "dist/**",
     "!**/*.map",
     "!**/*.test.*"
