--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-tools",
-  "version": "5.0.0",
+  "version": "5.0.1-alpha.0",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "bin": {
@@ -40,9 +40,9 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^4.0.1",
-    "cspell-io": "^5.0.0",
-    "cspell-trie-lib": "^5.0.0",
-    "cspell-util-bundle": "^5.0.0",
+    "cspell-io": "^5.0.1-alpha.0",
+    "cspell-trie-lib": "^5.0.1-alpha.0",
+    "cspell-util-bundle": "^5.0.1-alpha.0",
     "fs-extra": "^8.1.0",
     "gensequence": "^3.0.3",
     "glob": "^7.1.6",
