--- a/packages/Samples/package.json
+++ b/packages/Samples/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-tools-samples",
-  "version": "5.0.0",
+  "version": "5.0.1-alpha.0",
   "description": "Sample files used during unit tests",
   "private": true
 }
