--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie",
-  "version": "5.0.0",
+  "version": "5.0.1-alpha.0",
   "description": "Trie Data Structure reader for cspell",
   "bin": "bin.js",
   "main": "dist/index.js",
@@ -36,7 +36,7 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^2.20.3",
-    "cspell-trie-lib": "^5.0.0",
+    "cspell-trie-lib": "^5.0.1-alpha.0",
     "fs-extra": "^8.1.0",
     "gensequence": "^3.0.3"
   },
