--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -16,7 +16,7 @@
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "lint-travis": "tslint \"src/**/*.ts\"",
     "build": "npm run compile && npm run build-schema",
-    "build-schema": "ts-json-schema-generator -r --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings > ../../cspell.schema.json",
+    "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validationKeywords markdownDescription  --validationKeywords scope --validationKeywords deprecationMessage -o  ../../cspell.schema.json",
     "clean-build": "npm run clean && npm run build && npm run build-dictionaries",
     "build-dictionaries": "npm run build_dictionaries-word-lists",
     "build_dictionaries-word-lists": "node ../../node_modules/cspell-tools/bin.js compile \"./dictionaries/!(words)*.txt\" -o ./dist/dictionaries/",
