fix(cspell): Fix an issue multiple command line files
The command line tool was attempting to group multiple globs together to reduce the number of calls to the file system. This resulted in globs that would not match anything.

Fixes #182

--- a/packages/cspell/.vscode/launch.json
+++ b/packages/cspell/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "name": "cspell: Run",
             "program": "${workspaceRoot}/dist/app.js",
-			"args": ["--root=..", "-v", "**/*.ts" ],
+			"args": ["--root=..", "-v", "**/*.ts", "*.md" ],
             "cwd": "${workspaceRoot}",
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
             "sourceMaps": true
