--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist/index.js",
     "dist/index.d.ts",
+    "dist/xregexp.d.ts",
     "!**/*.map",
     "!**/*.test.*",
     "!**/temp/**"
