--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -55,10 +55,8 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "dependencies": {
-    "@types/xregexp": "^4.3.0"
-  },
   "devDependencies": {
+    "@types/xregexp": "^4.3.0",
     "rimraf": "^2.6.3",
     "xregexp": "^4.3.0"
   }
