--- a/packages/cspell-util-bundle/package.json
+++ b/packages/cspell-util-bundle/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist/index.js",
     "dist/index.d.ts",
+    "dist/xregexp.d.ts",
     "!**/*.map",
     "!**/*.test.*",
     "!**/temp/**"
@@ -55,8 +56,8 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
-    "@types/xregexp": "^3.0.30",
+    "@types/xregexp": "^4.3.0",
     "rimraf": "^2.6.3",
-    "xregexp": "^4.2.4"
+    "xregexp": "^4.3.0"
   }
 }
