Use npx version of cspell

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "build": "lerna run build",
     "build-schema": "lerna run build-schema",
-    "check-spelling": "cspell **/{*.ts,*.md}",
+    "check-spelling": "npx cspell **/{*.ts,*.md}",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
     "coverage": "npm run gen-coverage",
     "gen-coverage": "lerna run coverage",
-    "install": "lerna bootstrap --ci --force-local",
+    "install": "lerna bootstrap --ci",
     "lint-travis": "lerna run lint-travis",
     "prepare": "npm run clean-build",
     "pub": "npm install && npm test && lerna publish",
@@ -53,7 +53,6 @@
     "ajv-cli": "^3.1.0",
     "codecov": "^3.6.4",
     "coveralls": "^3.0.11",
-    "cspell": "^4.0.56",
     "cspell-dict-en_us": "^1.2.24",
     "cspell-dict-es-es": "^1.0.18",
     "cspell-dict-nl-nl": "^1.0.23",
