--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -38,25 +38,8 @@
     "commander": "^2.20.3",
     "cspell-trie-lib": "^5.0.1-alpha.0",
     "fs-extra": "^8.1.0",
-    "gensequence": "^3.1.1"
-  },
-  "nyc": {
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "src/**/*.test.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "json",
-      "html"
-    ]
+    "gensequence": "^3.1.1",
+    "iterable-to-stream": "~1.0.1"
   },
   "engines": {
     "node": ">=10.0.0"
