Make sure everything is on the same version

--- a/packages/cspell-trie2-lib/package.json
+++ b/packages/cspell-trie2-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie2-lib",
-  "version": "4.0.4",
+  "version": "5.0.2-alpha.0",
   "description": "Trie Data Structure to support cspell.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,24 +32,6 @@
     "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-trie"
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
-  "nyc": {
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "src/**/*.test.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "json",
-      "html"
-    ]
-  },
   "engines": {
     "node": ">=10.0.0"
   }
