--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -38,7 +38,8 @@
     "commander": "^2.20.3",
     "cspell-trie-lib": "^5.0.1-alpha.0",
     "fs-extra": "^8.1.0",
-    "gensequence": "^3.0.3"
+    "gensequence": "^3.0.3",
+    "iterable-to-stream": "^1.0.1"
   },
   "nyc": {
     "include": [
